<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WeatherActivity">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/weatherIconImageView"
    android:layout_alignParentTop="true"
    android:src="@drawable/na"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/temperature"
    android:id="@+id/temperatureTextView"
    android:layout_below="@+id/weatherIconImageView"
    android:layout_centerHorizontal="true"
    android:textStyle="bold"
    android:typeface="serif" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/condition"
    android:id="@+id/conditionTextView"
    android:layout_below="@+id/temperatureTextView"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/location"
    android:id="@+id/locationTextView"
    android:layout_below="@+id/conditionTextView"
    android:layout_centerHorizontal="true"
    android:textStyle="bold" />
</RelativeLayout>